Fixed docker tests